# dynamic-rig-ui

./: .gitignore  README.md  __init__.py  blender_manifest.toml  config.py  export.py  full.py  lib.py  properties.py  pyproject.toml  reload.py  vertexGroups.py
core/: __init__.py  cache.py
operators/: __init__.py  rig_ops.py  rigging_ops.py  snap_ops.py  toggle_ops.py  ui_ops.py
panels/: __init__.py  main_panel.py  masks_panel.py  props_panel.py  rigui_panel.py  settings_panel.py  tools_panel.py
tests/: Untitled.blend
utils/: __init__.py  rig_utils.py  ui_state.py  ui_utils.py
