[project]
name = "rig-ui"
version = "2.0.0"
description = "Custom rig UI addon for Blender"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E402",   # Import not at top of file (bl_info doit être avant)
]

[tool.ruff.lint.isort]
known-first-party = ["rig_ui"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
